
[metadata]
name = kt.problemdetails
version = 1.0.0
license_files = LICENSE.txt
author = Keeper Technology, LLC
author_email = info@keepertech.com
url = https://kt-git.keepertech.com/DevTools/kt.problemdetails
description = keeperINSIGHT Service
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
namespace_packages =
    kt
packages =
    kt.problemdetails
package_dir =
    = src
install_requires =
    Flask
    zope.interface
    zope.schema
